3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Apply long standing patch #1382884: change to player wraith race courtesy Anton Oussik.
 lib/attackmess: new attack messages for feeding.
 lib/treasures: give feeding skill to wraith.
 server/attack.c: feeding skill, life stealing.
 server/skill_util.c: new skill.
 server/player.c: wraiths don't regenerate hp.
 server/apply.c: wraiths don't get anything by eating food.
 include/libproto.h: new functions.
 include/attack.h: new attack message type.
 include/skills.h: new skill.
 common/player.c: wraith-related functions.
Ryo 2007-01-14

Apply patch #1631685: Monster flag set on all monster parts courtesy Aaron Baugher.
 common/arch.c
Ryo 2007-01-14

Object types refactoring: TRIGGER.
    See types ChangeLog for details.
----
Object types refactoring: TRANSPORT, BOOK, POWER_CRYSTAL, BOOK.
    See types ChangeLog for details.
Modified files:
    include/ob_methods.h include/ob_types.h
    server/ob_methods.c server/ob_types.c
    server/apply.c server/c_object.c server/time.c
Added files:
    types/transport/transport.c types/power_crystal/power_crystal.c
    types/book/book.c types/item_transformer/item_transformer.c
    types/legacy/apply.c types/legacy/legacy_describe.c types/legacy/process.c
    types/common/describe.c
Removed files:
    server/egoitem.c
Yann Chachkoff 2007-01-14

New util: mapper.c, which generates HTML pages to browse maps.
See the file itself for information and such.
----
 Moved structures outside a .c so other programs can access it.
 include/image.h: new file, client-side image structures.
 socket/image.c: moved data to include.
----
 utils/mapper.c: new program, map browser generator.